--- a/AIML_Lab_06.ipynb
+++ b/AIML_Lab_06.ipynb
@@ -25,12 +25,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 243
         },
         "id": "LgjL5aY5R0cC",
         "outputId": "7413c738-971b-4795-cb03-25d40723fe39"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +391,7 @@
         "id": "CSGtT5cYSCxz",
         "outputId": "a8d7c993-6e7d-429d-c6f2-c8312c7cc93c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
         "id": "U_KabO5uSFut",
         "outputId": "191d5174-b447-43b0-8be2-c7f8833c581e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -851,7 +851,7 @@
         "id": "4hCxRuEZSJPx",
         "outputId": "c2f674ff-36a2-45a4-8d3d-e4b51a65abd2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,12 +873,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 704
         },
         "id": "OKrKWF9hSMhI",
         "outputId": "fed10656-7b1c-4f33-a7f6-010c2ce72aa8"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -917,7 +917,7 @@
         "id": "R1Twh8zkSdsz",
         "outputId": "0b7cbe4c-f06c-4881-dbd8-d5e85dc359da"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1039,7 +1039,7 @@
       "metadata": {
         "id": "AyWkQj64SjPm"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1051,7 +1051,7 @@
       "metadata": {
         "id": "YuClrcmhSmK9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1063,12 +1063,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         },
         "id": "MMCmKKpfSng3",
         "outputId": "04fb9437-eef8-45ab-9987-0aa96af5e631"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1423,7 +1423,7 @@
       "metadata": {
         "id": "BJHoAjgkSq5E"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1441,7 +1441,7 @@
         "id": "1m7rYTzkSu2b",
         "outputId": "446dc8cf-b961-498d-9821-73e01d173022"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1870,7 +1870,7 @@
       "metadata": {
         "id": "dXAQtwfRSxp-"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1887,7 +1887,7 @@
         "id": "2_cMD7DTS0ev",
         "outputId": "601d5112-90dd-443a-d17e-2a54dd270f5e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1911,7 +1911,7 @@
         "id": "pCkj2988S26k",
         "outputId": "ac78cea6-17c3-4453-e6f1-05f8ca9f6dfd"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1942,7 +1942,7 @@
         "id": "mzK753_LTLWZ",
         "outputId": "f0811ca8-e311-4bb2-dfcb-9e74ecb37baf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1969,7 +1969,7 @@
       "metadata": {
         "id": "_WWrgv1ETQ8X"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1985,12 +1985,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 595
+          "height": 466
         },
         "id": "Ecw_zFvWTV06",
         "outputId": "954c8cf9-56fa-4abc-ef01-2871c11c2850"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2019,6 +2019,18 @@
       "source": [],
       "metadata": {
         "id": "Z52VJXypTX7f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "iHrd6M6rVPxn"
       },
       "execution_count": null,
       "outputs": []
